FEAT: - Dataconstraints - Updated ec-locaiton -
